--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,8 @@ h2 {
 }
 
 #main-content {
-	padding: 50px 60px;
+	padding: 50px 0;
+	max-width: 1280px;
 	min-height: 100vh;
 	font-family: 'Roboto', sans-serif;
 }
