--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,8 @@ h2 {
 	padding: 50px 60px;
 	min-height: 100vh;
 	font-family: 'Roboto', sans-serif;
+	padding: 50px 0;
+ -	max-width: 1280px;
 }
 
 #main { 
@@ -548,8 +550,10 @@ div.button-logo-footer{
 
 .comments-section .submit {
 	float: none;
-  height: 35px;
-  width: 164px;
+  	height: 35px;
+  	width: 164px;
+  	height: 35px;
+ 	width: 164px;
 }
 
 .avatar {
