--- a/css/main.css
+++ b/css/main.css
@@ -101,11 +101,10 @@ h2 {
 }
 
 #main-content {
-	padding: 50px 60px;
+	padding: 50px 0;
 	min-height: 100vh;
 	font-family: 'Roboto', sans-serif;
-	padding: 50px 0;
- -	max-width: 1280px;
+ 	max-width: 1280px;
 }
 
 #main { 
