--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ select:focus
 	outline:0;
 }
 
+/*
 input:invalid,
 textarea:invalid,
 select:invalid{
@@ -30,6 +31,7 @@ textarea:valid,
 select:valid {
 	box-shadow: 1px 1px 1px green;
 }
+*/
 
 h2 {
 	font-size: 1.8em;
